--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,3 @@
 AddType application/x-httpd-php5 .htm .html
-ErrorDocument 400 /errors/400.html
-ErrorDocument 404 /errors/404.html
+ErrorDocument 400 https://melon362.github.io/errors/400.html
+ErrorDocument 404 https://melon362.github.io/errors/404.html
